--- a/locally-installed-files/instructions.html
+++ b/locally-installed-files/instructions.html
@@ -28,6 +28,16 @@
             padding-bottom: 10px;
             padding-top: 10px;
         }
+
+        .instructions-screenshots {
+            width: 100%;
+            height: 100%;
+        }
+
+        figcaption {
+            font-size: smaller;
+        }
+
     </style>
 
 </head>
@@ -65,6 +75,12 @@
                 you use to connect to MAXIS, PRISM, and MMIS. All users of those systems should have BlueZone
                 installed.</p>
         </div>
+        <div class="col-xs-12 col-md-4">
+            <figure>
+                <a href="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-Session-Manager-Icons.jpg" target="_blank"><img alt='A purple Windows desktop with two icons: one is for "BlueZone Session Manager" and the other is for "Alternate Desktop.zmd."' class="instructions-screenshots" src="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-Session-Manager-Icons.jpg"></a>
+                <figcaption>Your BlueZone icons probably look something like this. The session manager contains several *.ZMD files, typically stored in your "\Documents\BlueZone\Config" folder. Your local files could look very different. </figcaption>
+            </figure>
+        </div>
     </div>
     <div class="row config-instructions">
         <div class="col-xs-12 col-md-8">
@@ -74,6 +90,12 @@
                 “Auto-Launch the BlueZone DOS HLLAPI Redirector”. Press “OK” when finished.</p>
             <p>The API settings ensure that when scripts are used in multiple sessions (screens), BlueZone knows to
                 which session the commands should be routed.</p>
+        </div>
+        <div class="col-xs-12 col-md-4">
+            <figure>
+                <a href="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-API-settings.jpg" target="_blank"><img alt='An image of the Options>API dialog from BlueZone. The "Enable DDE Server Interface," "Auto-Assign HLLAPI Names," and "Allow Multiple Simultaneous Connections" checkboxes are checked.'class="instructions-screenshots" src="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-API-settings.jpg"></a>
+                <figcaption>These three checkboxes should be checked in order to ensure your script installation is working as expected.</figcaption>
+            </figure>
         </div>
     </div>
     <div class="row config-instructions">
@@ -98,6 +120,12 @@
                 </small>
             </aside>
         </div>
+        <div class="col-xs-12 col-md-4">
+            <figure>
+                <a href="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-Power-Pad-window.jpg" target="_blank"><img alt='An image of the View>Properties>Power Pads dialog in BlueZone. The "Show Power Pads" and "Enable Docking" checkboxes are checked, and the "Power Pads Directory" has been updated with the installed network drive. The "Available Power Pads" column shows a "dhs-supported-prism" Power Pad, and the user is hovering over the "Add" button, about to add it.' class="instructions-screenshots" src="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-Power-Pad-window.jpg"></a>
+                <figcaption>After inserting the Power Pads directory into the dialog, right away, you should see the PRISM Power Pad pop up. Click "Add" to add it to your screen, and ensure "Show Power Pads" and "Enable Docking" are both checked.</figcaption>
+            </figure>
+        </div>
     </div>
 
     <div class="row config-instructions">
@@ -108,6 +136,12 @@
             <p>Now, test your installation by trying one of the screen navigation scripts. Make sure you're logged in to
                 PRISM (and not password-ed out!) before testing. If it doesn't work, check your directories referenced
                 in steps 3 and 4 before seeking support.</p>
+        </div>
+        <div class="col-xs-12 col-md-4">
+            <figure>
+                <a href="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-Script-Directory.jpg" target="_blank"><img alt='An image of the Scripts>Properties dialog in BlueZone, with a network drive inserted into the "Scripts Directory" field.' class="instructions-screenshots" src="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-Script-Directory.jpg"></a>
+                <figcaption>Insert the same directory from Step 3 into this dialog. That makes sure the scripts all connect to the right place!</figcaption>
+            </figure>
         </div>
     </div>
     <div class="row config-instructions-no-bottom-border">
@@ -126,6 +160,13 @@
                     policies to move the default.zmd file to this location for staff to use.
                 </small>
             </aside>
+        </div>
+        <div class="col-xs-12 col-md-4">
+            <figure>
+                <a href="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-success.jpg" target="_blank"><img alt="An image of a BlueZone window, with a Power Pad on the top, and an overlayed thumbs up icon." class="instructions-screenshots" src="https://raw.githubusercontent.com/MN-Script-Team/bzs-config-utility/master/img/PRISM-success.jpg"></a>
+                <figcaption>Success! Everything should be ready to go!</figcaption>
+            </figure>
+
         </div>
     </div>
 
@@ -168,7 +209,7 @@
     <p>Please use these resources, and let staff know if you have questions!</p>
 
     <h4>I lost my BlueZone Scripts Power Pad!</h4>
-    <p>If you (or a coworker) lost the Power Pad, it can be challenging to get it back. The easiest solution is to <a href="C:\DHS-PRISM-Scripts\locally-installed-files\default.zmd">download the default *.zmd file</a> and save it to your machine (either on the desktop or in the default BlueZone config directory). Then, just open that file and you should have scripts again.</p>
+    <p>If you (or a coworker) lost the Power Pad, it can be challenging to get it back. The easiest solution is to <a href="C:\DHS-PRISM-Scripts\locally-installed-files\default.zmd">download the default *.zmd file</a> and save it to your machine (either on the desktop or in the default BlueZone config directory). Then, just open that file and you should have scripts again. Alternatively, if the default *.zmd file is not working, following the steps above should restore the scripts. Saving a copy of the *.zmd file on the desktop may help with this issue if it happens frequently.</p>
     <p>If a coworker loses their scripts, simply send them a link to this document!</p>
 
     <!-- Footer! -->
