#599: wrapped up index.html, should be working OK now

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="aboutscripts.html">About scripts</a></li>
+					<!--<li><a href="aboutscripts.html">About scripts</a></li>-->
 					<li><a href="https://mn-script-team.github.io/bzs-config-utility/" target="_blank">Get scripts!</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse --> 
@@ -58,7 +58,7 @@
 		
 		<div class="jumbotron">
 		  	<h1>DHS-PRISM-Scripts</h1>
-		  	<p>List of changes</p> 
+		  	<p>List of changes over the last month</p> 
 		</div>
 		
 		<div class="alert alert-warning" role="alert">
@@ -67,7 +67,7 @@
 		
 		<div class="row">
 			<div class="col-xs-12">
-				<h3>About this page</h3>
+				<h3>About this list</h3>
 				<p>This is a dynamic list of changes implemented in the last month by the Minnesota Department of Human Services' BlueZone Scripts PRISM project. It works by scanning the scripts and returning each change from the changelog functions.</p>
 				<p>These functions and all scripts in this project are open source. The source code for the project can be <a href="https://github.com/MN-Script-Team/DHS-PRISM-Scripts" target="_blank">found on GitHub</a>.</p>
 			</div>
@@ -76,11 +76,11 @@
 		
 		<span id="changelogContents"> 
 			<!--This is an alert to be provided in case FuncLib is unreachable or the JS is broken or something.-->
-			<div class="alert alert-danger" role="alert">
+<!--			<div class="alert alert-danger" role="alert">
 				<p>
 					If you can see this, then something is wrong, and <a href="mailto:veronica.cary@state.mn.us">Veronica Cary</a> should probably be notified.
 				</p>
-			</div>  
+			</div>  -->
 		</span>
 		
 			
