#599: basic changelog HTML utility built and tested
There's a few more components but it's late and I want to go to bed. More to come tomorrow.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<h3>About this list</h3>
-				<p>This is a dynamic list of changes implemented in the last month by the Minnesota Department of Human Services' BlueZone Scripts PRISM project. It works by scanning the scripts and returning each change from the changelog functions.</p>
+				<p>This is a dynamic list of changes implemented in the last 30 days by the Minnesota Department of Human Services' BlueZone Scripts PRISM project. It works by scanning the scripts and returning each change from the changelog functions.</p>
 				<p>These functions and all scripts in this project are open source. The source code for the project can be <a href="https://github.com/MN-Script-Team/DHS-PRISM-Scripts" target="_blank">found on GitHub</a>.</p>
 			</div>
 		</div>
