#599: added prettier issue tracking code, and navbar
Also updated index.html to provide a link to issuelist.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<!--<li><a href="aboutscripts.html">About scripts</a></li>-->
+					<li><a href="issuelist.html">Project tracking/issue list</a></li>
 					<li><a href="https://mn-script-team.github.io/bzs-config-utility/" target="_blank">Get scripts!</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse --> 
