--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 	<!--Hit moment.js-->
 	<script src="js/moment.min.js" charset="utf-8"></script>	
 	
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	
 </head>
 
 
@@ -42,19 +45,19 @@
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-script-links" aria-expanded="false">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">DHS-PRISM-Scripts</a>
+				<a class="navbar-brand" href="index.html"><img src="img/dhslogo.png" /></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<div class="collapse navbar-collapse" id="navbar-collapse-script-links">
 				<ul class="nav navbar-nav navbar-right">
-					<!--<li><a href="aboutscripts.html">About scripts</a></li>-->
+					<li class="active"><a href="index.html">Changelog</a></li>
 					<li><a href="issuelist.html">Project tracking/issue list</a></li>
 					<li><a href="https://mn-script-team.github.io/bzs-config-utility/" target="_blank">Get scripts!</a></li>
 				</ul>
@@ -63,10 +66,9 @@
 		</div>
 	</nav>
 	<div class="container">
-
-		<div class="jumbotron">
-		  	<h1>DHS-PRISM-Scripts</h1>
-		  	<p>List of changes over the last month</p>
+		
+		<div class="page-header">
+  			<h1>PRISM Scripts Changelog</h1> 
 		</div>
 		
 		<span id="IEWarning">
@@ -76,36 +78,35 @@
 		</span>
 
 		<div class="alert alert-info" role="info">
-			<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Please note that this list and the utilities behind it are both very much under construction.
+			<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Please note that this list and the utilities behind it are both in "beta". They are functional but there may be bugs.
 		</div>
 
 		<div class="row">
 			<div class="col-xs-12">
-				<h3>About this list</h3>
-				<p>This is a dynamic list of changes implemented by the Minnesota Department of Human Services' BlueZone Scripts PRISM project. It works by scanning the scripts and returning each change from the changelog functions.</p>
+				<h2>About this list</h2>
+				<p>This is a list of changes implemented by the Minnesota Department of Human Services' BlueZone Scripts PRISM project. It works by scanning each script file in our workspace, and returning a list of all changes made by scriptwriters.</p>
+				<p>To view this changelog, simply select some default dates (for example, "last 30 days"), and press the "submit" button.</p>
 				<p>These functions and all scripts in this project are open source. The source code for the project can be <a href="https://github.com/MN-Script-Team/DHS-PRISM-Scripts" target="_blank">found on GitHub</a>.</p>
 			</div>
 		</div>
 		<hr>
 		<div class="row" id="search-form">
-			<div class="col-xs-12 col-sm-3">
+			<div class="col-xs-12 col-sm-3" id="defaultDatePicker">
 				<h4>Select some default dates...</h4>
-				<div class="input-group">
-					<input type="button" onclick="modifyDateRangeLast30Days()" class="btn btn-default btn-sm" value="last 30 days" />
-					<input type="button" onclick="modifyDateRangeLast90Days()" class="btn btn-default btn-sm" value="last 90 days" />
-					<input type="button" onclick="modifyDateRangeMonthToDate()" class="btn btn-default btn-sm" value="Month to date" />
-					<input type="button" onclick="modifyDateRangeLastCompleteMonth()" class="btn btn-default btn-sm" value="Last complete month" />
-				</div>
+				<input type="button" onclick="modifyDateRangeLast30Days()" class="btn btn-default btn-md" value="last 30 days" /> <br />
+				<input type="button" onclick="modifyDateRangeLast90Days()" class="btn btn-default btn-md" value="last 90 days" /> <br />
+				<input type="button" onclick="modifyDateRangeMonthToDate()" class="btn btn-default btn-md" value="Month to date" /> <br />
+				<input type="button" onclick="modifyDateRangeLastCompleteMonth()" class="btn btn-default btn-md" value="Last complete month" />
 			</div>
 			<div class="col-xs-12 col-sm-3">
 				<h4>...or pick a custom date range...</h4>
 				<span>
-					<div class="input-daterange input-group input-group-sm" id="datepicker">
+					<div class="input-daterange input-group input-group-md" id="datepicker">
 						<label for="start" class="sr-only">Start date</label>
-			    		<input type="text" class="input-sm form-control" name="start" id="start" />
+			    		<input type="text" class="input-md form-control" name="start" id="start" />
 			    		<span class="input-group-addon">to</span>
 						<label for="end" class="sr-only">End date:</label>
-			    		<input type="text" class="input-sm form-control" name="end" id="end" />
+			    		<input type="text" class="input-md form-control" name="end" id="end" />
 					</div>
 					<p>Select a custom date range to search for script changes.</p>
 				</span>
@@ -118,21 +119,29 @@
 			</div>
 			<div class="col-xs-12 col-sm-1">
 				<h4>Go!</h4>
-				<input type="button" onclick="displayChangelogInfo()" class="btn btn-primary btn-sm" value="Submit" />
+				<input id="goButton" type="button" onclick="displayChangelogInfo()" class="btn btn-primary btn-md" value="Submit" />
 			</div>
 		</div>
 		<hr />
-
-		<span id="changelogContents">
-
-		</span>
-
-
-
+		
+		<table class="table" id="changelogTable">
+    		<thead>
+      			<tr>
+					<th class="col-md-1" role="button" onclick="sortTable(0)">Category</th>
+        			<th class="col-md-1" role="button" onclick="sortTable(1)">Script</th>
+        			<th class="col-md-1" role="button" onclick="sortTable(2)">Update date</th>
+        			<th class="col-md-7" role="button" onclick="sortTable(3)">Details</th>
+					<th class="col-md-2" role="button" onclick="sortTable(4)">Scriptwriter</th>
+      			</tr>
+    		</thead>
+    		<tbody id="changelogContents">
+	      	
+		   	</tbody>
+			
+		</table>
+		
 	</div>
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	
